Refactored HTML structure by removing unnecessary class names for cleaner markup in index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="bg">
       <header class="topbar" role="banner">
-        <div class="topbar__left">
+        <div>
           <div class="brand">
             <div class="brand__mark" aria-hidden="true">♠</div>
-            <div class="brand__text">
+            <div>
               <div class="brand__title">Blackjack</div>
               <div class="brand__subtitle">Single Table • Classic Rules</div>
             </div>
@@ -27,23 +27,23 @@
               <span class="status__label">Waiting for bet</span>
             </div>
             <div class="status__meta">
-              <span class="status__kv"><span class="muted">Deck:</span> 1</span>
+              <span><span class="muted">Deck:</span> 1</span>
               <span class="status__sep" aria-hidden="true">•</span>
-              <span class="status__kv"><span class="muted">Min:</span> $5</span>
+              <span><span class="muted">Min:</span> $5</span>
               <span class="status__sep" aria-hidden="true">•</span>
-              <span class="status__kv"><span class="muted">Max:</span> $500</span>
+              <span><span class="muted">Max:</span> $500</span>
             </div>
           </div>
         </div>
 
-        <div class="topbar__right">
+        <div>
           <div class="hud" aria-label="Player HUD">
-            <div class="hud__item">
+            <div>
               <div class="hud__label">Balance</div>
               <div class="hud__value" id="hud-balance">$1,000</div>
             </div>
             <div class="hud__divider" aria-hidden="true"></div>
-            <div class="hud__item">
+            <div>
               <div class="hud__label">Bet</div>
               <div class="hud__value" id="hud-bet">$0</div>
             </div>
@@ -60,11 +60,11 @@
 
               <div class="table__grid" aria-label="Table layout">
                 <div class="table__row table__row--dealer" aria-label="Dealer area">
-                  <div class="seat seat--dealer">
+                  <div class="seat">
                     <div class="seat__header">
                       <div class="seat__name">Dealer</div>
                     </div>
-                    <div class="hand hand--dealer" aria-label="Dealer hand placeholder">
+                    <div class="hand" aria-label="Dealer hand placeholder">
                       <div class="hand__slots" aria-hidden="true">
                         <div class="card-slot"></div>
                         <div class="card-slot"></div>
@@ -120,11 +120,11 @@
                 </div>
 
                 <div class="table__row table__row--player" aria-label="Player area">
-                  <div class="seat seat--player">
+                  <div class="seat">
                     <div class="seat__header">
                       <div class="seat__name">You</div>
                     </div>
-                    <div class="hand hand--player" aria-label="Player hand placeholder">
+                    <div class="hand" aria-label="Player hand placeholder">
                       <div class="hand__slots" aria-hidden="true">
                         <div class="card-slot"></div>
                         <div class="card-slot"></div>
