Create temporary actions for hit and stand button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       <div class="seat__name">Dealer</div>
                     </div>
                     <div class="hand" aria-label="Dealer hand placeholder">
-                      <div class="hand__slots" aria-hidden="true">
+                      <div class="hand__slots js-dealer-hand" aria-hidden="true">
                         <div class="card-slot"></div>
                         <div class="card-slot"></div>
                         <div class="card-slot card-slot--ghost"></div>
@@ -123,7 +123,7 @@
                       <div class="seat__name">You</div>
                     </div>
                     <div class="hand" aria-label="Player hand placeholder">
-                      <div class="hand__slots" aria-hidden="true">
+                      <div class="hand__slots js-player-hand" aria-hidden="true">
                         <div class="card-slot"></div>
                         <div class="card-slot"></div>
                         <div class="card-slot card-slot--ghost"></div>
